# xsd-embedded-custom-parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conan.sh  conanfile.txt  custom-dom-LS-parser-impl.cxx  custom-dom-LS-parser-impl.hxx  custom-dom-implementation-impl.cxx  custom-dom-implementation-impl.hxx  driver.cxx  library-schema.cxx  library.cxx  library.xml
include/: custom-error-handler.hxx  library-schema-32.hxx  library-schema.hxx  library.hxx
src/: custom-dom-LS-parser-impl.cxx  custom-error-handler.cxx  grammar-input-stream.cxx  library-schema-32.cxx  library.cxx
toolchains/: toolchain-arm-linux-gnueabi.cmake
utils/conan_profiles/: profile-debug-arm-linux-gnueabi  profile-debug-x86_64-linux-gnu-32
utils/scripts/: conan.sh  generate_xsdbin.sh  run_arm.sh
utils/toolchains/: toolchain-arm-linux-gnueabi.cmake
